--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -361,6 +361,10 @@ body{
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(-11px -4px 4px rgba(255, 255, 255, 0.25));
 }
 
+.divTextoSobreMi span{
+    color: #5a80b6;
+}
+
 .rounded {
     border-radius: 20px !important;
 }
@@ -987,7 +991,7 @@ footer p{
         font-size: 34px;
     }
     .divAboutText h2{
-        font-size: 22px;
+        font-size: 25px;
     }
 }
 
@@ -996,7 +1000,7 @@ footer p{
         font-size: 30px;
     }
     .divAboutText h2{
-        font-size: 18px;
+        font-size: 24px;
     }
 }
 
@@ -1005,6 +1009,6 @@ footer p{
         font-size: 28px;
     }
     .divAboutText h2{
-        font-size: 20px;
+        font-size: 23px;
     }
 }
