--- a/css/estilo.css
+++ b/css/estilo.css
@@ -799,13 +799,7 @@ footer p{
     .divIdiomas{
         right: 100px;
     }
-}
-
-@media (max-width: 1300px){
-    .divIdiomas{
-        right: 0px;
-    }
-}
+}}
 
 @media (max-width: 1200px){
     .divIdiomas{
