--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -713,11 +713,111 @@ footer p{
     text-align: center;
 }
 
+@media (max-width: 3000px){
+    .divIdiomas{
+        right: 900px;
+    }
+}
 
+@media (max-width: 2900px){
+    .divIdiomas{
+        right: 850px;
+    }
+}
+
+@media (max-width: 2800px){
+    .divIdiomas{
+        right: 800px;
+    }
+}
+
+@media (max-width: 2700px){
+    .divIdiomas{
+        right: 800px;
+    }
+}
+
+@media (max-width: 2600px){
+    .divIdiomas{
+        right: 700px;
+    }
+}
+
+@media (max-width: 2500px){
+    .divIdiomas{
+        right: 650px;
+    }
+}
+
+@media (max-width: 2400px){
+    .divIdiomas{
+        right: 600px;
+    }
+}
+
+@media (max-width: 2300px){
+    .divIdiomas{
+        right: 550px;
+    }
+}
+
+@media (max-width: 2200px){
+    .divIdiomas{
+        right: 500px;
+    }
+}
+
+@media (max-width: 2100px){
+    .divIdiomas{
+        right: 450px;
+    }
+}
+
+@media (max-width: 2000px){
+    .divIdiomas{
+        right: 400px;
+    }
+}
+
+@media (max-width: 1900px){
+    .divIdiomas{
+        right: 350px;
+    }
+}
+
+@media (max-width: 1800px){
+    .divIdiomas{
+        right: 300px;
+    }
+}
+
+@media (max-width: 1700px){
+    .divIdiomas{
+        right: 250px;
+    }
+}
+
+@media (max-width: 1600px){
+    .divIdiomas{
+        right: 170px;
+    }
+}
+
+@media (max-width: 1500px){
+    .divIdiomas{
+        right: 150px;
+    }
+}
+
+@media (max-width: 1400px){
+    .divIdiomas{
+        right: 100px;
+    }
+}
 
 @media (max-width: 1200px){
     .divIdiomas{
-        right: 100px;
+        right: 50px;
     }
     .divAboutText h1{
         font-size: 56px;
